--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -33,7 +33,7 @@ include ../../buildsys.mk
 include ../../extra.mk
 
 # These overrides variables in buildsys.mk and so must come after it.
-PACKAGE = audacious
+PACKAGE_NAME = audacious
 DATA = Skins/Classic/balance.png	\
        Skins/Classic/cbuttons.png	\
        Skins/Classic/eq_ex.png		\
