--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -8,6 +8,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
-CPPFLAGS += -I../.. ${PTHREAD_CFLAGS} ${GTK_CFLAGS} ${SDL_CFLAGS}
+CPPFLAGS += -I../.. ${GTK_CFLAGS} ${SDL_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += -lm ${PTHREAD_LIBS} ${GTK_LIBS} ${SDL_LIBS}
+LIBS += -lm ${GTK_LIBS} ${SDL_LIBS}
