mpris2: Implement volume control.

--- a/src/mpris2/Makefile
+++ b/src/mpris2/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${GLIB_CFLAGS} ${GIO_UNIX_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GLIB_LIBS} ${GIO_UNIX_LIBS}
+LIBS += -lm ${GLIB_LIBS} ${GIO_UNIX_LIBS}
