Fix detection of Ogg Vorbis libraries. Closes: #113.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -65,8 +65,6 @@ JACK_CFLAGS ?= @JACK_CFLAGS@
 JACK_LIBS ?= @JACK_LIBS@
 LIBFLAC_LIBS ?= @LIBFLAC_LIBS@
 LIBFLAC_CFLAGS ?= @LIBFLAC_CFLAGS@
-LIBROAR_CFLAGS ?= @LIBROAR_CFLAGS@
-LIBROAR_LIBS ?= @LIBROAR_LIBS@
 MMS_CFLAGS ?= @MMS_CFLAGS@
 MMS_LIBS ?= @MMS_LIBS@
 MODPLUG_CFLAGS ?= @MODPLUG_CFLAGS@
@@ -79,10 +77,6 @@ NEON_CFLAGS ?= @NEON_CFLAGS@
 NEON_LIBS ?= @NEON_LIBS@
 NOTIFY_CFLAGS ?= @NOTIFY_CFLAGS@
 NOTIFY_LIBS ?= @NOTIFY_LIBS@
-OGG_VORBIS_CFLAGS ?= @OGG_VORBIS_CFLAGS@
-OGG_VORBIS_LIBS ?= @OGG_VORBIS_LIBS@
-OPENAL_CFLAGS ?= @OPENAL_CFLAGS@
-OPENAL_LIBS ?= @OPENAL_LIBS@
 OSS_CFLAGS ?= @OSS_CFLAGS@
 PANGO_CFLAGS ?= @PANGO_CFLAGS@
 PANGO_LIBS ?= @PANGO_LIBS@
@@ -100,6 +94,8 @@ SIDPLAY2_CFLAGS ?= @SIDPLAY2_CFLAGS@
 SIDPLAY2_LIBS ?= @SIDPLAY2_LIBS@
 SNDFILE_CFLAGS ?= @SNDFILE_CFLAGS@
 SNDFILE_LIBS ?= @SNDFILE_LIBS@
+VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
+VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
 WAVPACK_LIBS ?= @WAVPACK_LIBS@
 XCOMPOSITE_CFLAGS ?= @XCOMPOSITE_CFLAGS@
