blur_scope: Use PreferencesWidgets (with a GtkColorButton).

--- a/src/blur_scope/Makefile
+++ b/src/blur_scope/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = blur_scope${PLUGIN_SUFFIX}
 
-SRCS = blur_scope.c	\
-       config.c
+SRCS = blur_scope.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -9,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += -std=c99 ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
-LIBS += ${GTK_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} -lm
