crossfade: Use PreferencesWidgets and aud_interface_show_error().

--- a/src/crossfade/Makefile
+++ b/src/crossfade/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = crossfade${PLUGIN_SUFFIX}
 
-SRCS = crossfade.c plugin.c
+SRCS = crossfade.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -8,5 +8,4 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
-LIBS += ${GTK_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
