--- a/src/lirc/Makefile
+++ b/src/lirc/Makefile
@@ -1,8 +1,6 @@
 PLUGIN = lirc${PLUGIN_SUFFIX}
 
-SRCS = lirc.c \
-       configure.c
-      
+SRCS = lirc.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -10,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${MOWGLI_CFLAGS}   -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  -llirc_client
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} -llirc_client
