mixer: Use PreferencesWidgets.

--- a/src/mixer/Makefile
+++ b/src/mixer/Makefile
@@ -1,12 +1,11 @@
 PLUGIN = mixer${PLUGIN_SUFFIX}
 
-SRCS = mixer.c plugin.c
+SRCS = mixer.c
 
 include ../../buildsys.mk
 include ../../extra.mk
 
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GTK_LIBS}
