resample: Use PreferencesWidgets and allow disabling rate mappings.

--- a/src/resample/Makefile
+++ b/src/resample/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = resample${PLUGIN_SUFFIX}
 
-SRCS = resample.c plugin.c
+SRCS = resample.c
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} -lsamplerate
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lsamplerate
