--- a/src/flacng/Makefile
+++ b/src/flacng/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${LIBFLAC_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../..
-LIBS += ${LIBFLAC_LIBS} ${GTK_LIBS} ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${LIBFLAC_CFLAGS} -I../..
+LIBS += ${LIBFLAC_LIBS}
