Fix GIO_CFLAGS/LIBS not being set.

--- a/configure.ac
+++ b/configure.ac
@@ -91,6 +91,8 @@ fi
 
 if test "x$enable_gio" = "xyes"; then
     TRANSPORT_PLUGINS="$TRANSPORT_PLUGINS gio"
+    AC_SUBST(GIO_CFLAGS)
+    AC_SUBST(GIO_LIBS)
 fi
 
 ### ---------------------------------------------------------------------------
