Fix GIO_CFLAGS/LIBS not being set.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -54,6 +54,8 @@ FLUIDSYNTH_CFLAGS ?= @FLUIDSYNTH_CFLAGS@
 FLUIDSYNTH_LIBS ?= @FLUIDSYNTH_LIBS@
 GDKX11_CFLAGS ?= @GDKX11_CFLAGS@
 GDKX11_LIBS ?= @GDKX11_LIBS@
+GIO_CFLAGS ?= @GIO_CFLAGS@
+GIO_LIBS ?= @GIO_LIBS@
 GIO_UNIX_CFLAGS ?= @GIO_UNIX_CFLAGS@
 GIO_UNIX_LIBS ?= @GIO_UNIX_LIBS@
 GLIB_CFLAGS ?= @GLIB_CFLAGS@
