--- a/src/gnomeshortcuts/Makefile
+++ b/src/gnomeshortcuts/Makefile
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${DBUS_CFLAGS} -I../.. -I..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${DBUS_CFLAGS} -I../.. -I..
 LIBS += ${GLIB_LIBS} ${DBUS_LIBS} ${GTK_LIBS}
