--- a/src/jack/Makefile
+++ b/src/jack/Makefile
@@ -2,7 +2,6 @@ PLUGIN = jackout${PLUGIN_SUFFIX}
 
 SRCS = jack.c		\
        bio2jack.c
-#       configure.c	\
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -10,5 +9,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${JACK_LIBS} -lsamplerate -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += ${JACK_LIBS} -lsamplerate -lm
