tonegen: Does not use libaudgui or GTK.

--- a/src/tonegen/Makefile
+++ b/src/tonegen/Makefile
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS}  -I../..
+LIBS += ${GLIB_LIBS} -lm
