unix-io: Eliminate GLib dependency.

--- a/src/unix-io/Makefile
+++ b/src/unix-io/Makefile
@@ -1,12 +1,11 @@
 PLUGIN = unix-io${PLUGIN_SUFFIX}
 
-SRCS = gtk.c unix-io.c
+SRCS = unix-io.c
 
 include ../../buildsys.mk
 include ../../extra.mk
 
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
-CPPFLAGS += -I../.. ${GTK_CFLAGS}
+CPPFLAGS += -I../..
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GTK_LIBS}
