Run make update-po.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,7 +22,6 @@ src/aosd/aosd_ui.c
 src/asx/asx.c
 src/audpl/audpl.c
 src/blur_scope/blur_scope.c
-src/blur_scope/config.c
 src/bs2b/plugin.c
 src/cairo-spectrum/cairo-spectrum.c
 src/cdaudio-ng/cdaudio-ng.c
@@ -57,18 +56,16 @@ src/console/Spc_Dsp.cxx
 src/console/Spc_Emu.cxx
 src/console/Vgm_Emu.cxx
 src/console/Ym2612_Emu.cxx
-src/crossfade/plugin.c
+src/crossfade/crossfade.c
 src/crystalizer/crystalizer.c
 src/cue/cue.c
 src/echo_plugin/echo.c
-src/echo_plugin/gui.c
 src/ffaudio/ffaudio-core.c
 src/filewriter/filewriter.c
 src/filewriter/mp3.c
 src/filewriter/vorbis.c
 src/flacng/plugin.c
 src/gio/gio.c
-src/gio/gtk.c
 src/gnomeshortcuts/gnomeshortcuts.c
 src/gtkui/columns.c
 src/gtkui/layout.c
@@ -79,30 +76,25 @@ src/gtkui/ui_statusbar.c
 src/hotkey/gui.c
 src/hotkey/plugin.c
 src/jack/bio2jack.c
-src/jack/configure.c
 src/jack/jack.c
 src/ladspa/plugin.c
-src/lirc/configure.c
 src/lirc/lirc.c
 src/lyricwiki/lyricwiki.c
 src/m3u/m3u.c
 src/metronom/metronom.c
-src/mixer/plugin.c
+src/mixer/mixer.c
 src/mms/mms.c
 src/modplug/plugin_main.c
 src/mpg123/mpg123.c
 src/mpris2/plugin.c
-src/mtp_up/mtp.c
 src/neon/neon.c
-src/notify/libnotify-aosd.c
-src/notify/libnotify-aosd_event.c
-src/null/null.c
+src/notify/event.c
+src/notify/notify.c
 src/oss4/plugin.c
-src/oss4/utils.c
 src/pls/pls.c
 src/psf/plugin.c
 src/pulse_audio/pulse_audio.c
-src/resample/plugin.c
+src/resample/resample.c
 src/scrobbler/configure.c
 src/scrobbler/plugin.c
 src/scrobbler/scrobbler.c
@@ -116,18 +108,15 @@ src/skins/ui_manager.c
 src/skins/ui_playlist.c
 src/skins/ui_skinselector.c
 src/skins/util.c
-src/smb/smb.c
 src/sndfile/plugin.c
 src/sndstretch/sndstretch_xmms.c
 src/song_change/song_change.c
 src/statusicon/statusicon.c
 src/stereo_plugin/stereo.c
 src/tonegen/tonegen.c
-src/unix-io/gtk.c
 src/unix-io/unix-io.c
 src/voice_removal/voice_removal.c
 src/vorbis/vorbis.c
-src/vtx/about.c
 src/vtx/vtx.c
 src/wavpack/wavpack.c
 src/xsf/plugin.c
