sndstretch: Removed (replaced by speed-pitch).

--- a/configure.ac
+++ b/configure.ac
@@ -49,7 +49,7 @@ dnl ======================
 
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS=""
-EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixer sndstretch stereo_plugin voice_removal echo_plugin"
+EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixer stereo_plugin voice_removal echo_plugin"
 GENERAL_PLUGINS="alarm albumart search-tool"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
 CONTAINER_PLUGINS="audpl m3u pls asx"
@@ -1110,7 +1110,6 @@ echo "  Dynamic Range Compressor:               yes"
 echo "  Echo/Surround:                          yes"
 echo "  Extra Stereo:                           yes"
 echo "  LADSPA Host:                            yes"
-echo "  SndStretch:                             yes"
 echo "  Voice Removal:                          yes"
 echo "  Bauer stereophonic-to-binaural (bs2b):  $have_bs2b"
 echo "  Sample Rate Converter (resample):       $enable_resample"
