--- a/extra.mk.in
+++ b/extra.mk.in
@@ -93,6 +93,7 @@ SIDPLAY2_CFLAGS ?= @SIDPLAY2_CFLAGS@
 SIDPLAY2_LIBS ?= @SIDPLAY2_LIBS@
 SNDFILE_CFLAGS ?= @SNDFILE_CFLAGS@
 SNDFILE_LIBS ?= @SNDFILE_LIBS@
+SNDIO_LIBS ?= @SNDIO_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
