lyricwiki: Cleanup, better error reporting. Use str_encode_percent(). Closes: #115.

--- a/src/lyricwiki/Makefile
+++ b/src/lyricwiki/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = lyricwiki${PLUGIN_SUFFIX}
 
-SRCS = lyricwiki.c urlencode.c
+SRCS = lyricwiki.c
 
 include ../../buildsys.mk
 include ../../extra.mk
