sid, modplug: Link with $CXX. Eliminates the need to link to -lstdc++ explicitly.

--- a/src/modplug/Makefile
+++ b/src/modplug/Makefile
@@ -16,4 +16,4 @@ LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MODPLUG_CFLAGS} -I../..
-LIBS += ${MODPLUG_LIBS} -lstdc++
+LIBS += ${MODPLUG_LIBS}
