New configuration window
A configuration window has been implemented. Its function is to check if authenticated requests can be made to last.fm. If so, the plugin is configured. If not, the user must authorize Audacious on his last.fm account and then re-check the application on the plugin.
Some code was cleaned up here and there and removed some debug code.

--- a/src/scrobbler2/Makefile
+++ b/src/scrobbler2/Makefile
@@ -2,7 +2,8 @@ PLUGIN = scrobbler2${PLUGIN_SUFFIX}
 
 SRCS = scrobbler.c \
 	   scrobbler_communication.c \
-	   scrobbler_xml_parsing.c
+	   scrobbler_xml_parsing.c \
+	   config_window.c
 			
 
 include ../../buildsys.mk
